force-app/main/default/objects/Cause__c.object
<CustomObject>
    <fields>
        <fullName>Cause_No_Value__c</fullName>
        <formula>VALUE(Cause_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cause No Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cause_No__c</fullName>
        <label>Cause No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Causes</relationshipLabel>
        <relationshipName>Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Text__c</fullName>
        <label>Code Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Causes (Code)</relationshipLabel>
        <relationshipName>Causes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_in_Text_Form__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <label>Integration Flag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemCause__c</fullName>
        <externalId>true</externalId>
        <label>ItemCause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Causes</relationshipLabel>
        <relationshipName>Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Causes</relationshipLabel>
        <relationshipName>Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_No__c</fullName>
        <label>Sort No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the Cause can be retrieved. Simulates soft deletion</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIRPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIRPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSOAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSOAP</label>
        <type>Checkbox</type>
    </fields>
    <label>Cause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Code_Text__c</columns>
        <columns>Notification__c</columns>
        <columns>Text__c</columns>
        <columns>Item__c</columns>
        <columns>Code_Group__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/17/2020 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Cause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>